--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "name": "daily-lexis",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -10,9 +11,16 @@
     "@google/genai": "^1.3.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.4",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "vite": "^6.0.0"
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "engines": {
     "node": ">=18.0.0"
